# cpp-task-loop

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Source/: IObservable.hpp
Source/Async/: Async.hpp  CallbackProvider.hpp  TaskLoop.cpp  TaskLoop.hpp  Utils.cpp  Utils.hpp
Source/Examples/: taskLoopExample.cpp
Source/Tests/: AsyncTest.cpp  CMakeLists.txt
